2008-08-16  David Schleef  <ds@schleef.org>

	* gst/typefind/gsttypefindfunctions.c: DV typefinding.  Remove
	  check for a bit that is 0 in IEC 61384, but not SMPTE 314M.
	  Fixes #548065.

2008-08-15  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst-libs/gst/pbutils/missing-plugins.c: (copy_and_clean_caps):
	When cleaning up the caps fields also remove "depth" for the same
	reason we remove "width".

2008-08-14  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst-libs/gst/pbutils/descriptions.c: (format_info_get_desc):
	  Add Lead H.264 here as well.

2008-08-14  Julien Moutte  <julien@fluendo.com>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps),
	(gst_riff_create_video_template_caps): Add Lead H.264 variant.

2008-08-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_create):
	When not slaved to another clock also subtract the base_time from our
	internal clock time to get the running time.

2008-08-12  David Schleef  <ds@schleef.org>

	* ext/theora/theoraenc.c: Remove the 2000 kbit limit to bitrate,
	  since it has no basis in libtheora.

2008-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/interfaces/propertyprobe.h:
	  Remove double "interface" from doc-string.

	* gst-libs/gst/interfaces/xoverlay.h:
	  Document interface.

	* gst-libs/gst/riff/riff.c:
	  Add basic doc blobs.

2008-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/audio/Makefile.am:
	  Don't try to build that example anymore.

2008-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/audio/.cvsignore:
	* gst-libs/gst/audio/Makefile.am:
	* gst-libs/gst/audio/gstaudiofiltertemplate.c:
	* gst-libs/gst/audio/make_filter:
	  Move audiofiltertemplate to gst-template.

2008-08-11  Stefan Kost  <ensonic@users.sf.net>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	* gst-libs/gst/audio/gstaudiosrc.h:
	  More docs and shuffling. What can we do with the hundreds of #defines.
